# internal/delivery/http/handler/auth.go
@@ -156,10 +156,10 @@ type newRegistrationCodeRequest struct {
 //	@Accept			json
 //	@Produce		json
 //	@Param			request	body		newRegistrationCodeRequest	true	"Request new OTP request body"
-//	@Success		200		{object}	response.Response		"OTP code requested successfully"
-//	@Failure		400		{object}	response.ErrorResponse	"Validation error"
-//	@Failure		429		{object}	response.ErrorResponse	"Too many requests, try again later"
-//	@Failure		500		{object}	response.ErrorResponse	"Internal server error"
+//	@Success		200		{object}	response.Response			"OTP code requested successfully"
+//	@Failure		400		{object}	response.ErrorResponse		"Validation error"
+//	@Failure		429		{object}	response.ErrorResponse		"Too many requests, try again later"
+//	@Failure		500		{object}	response.ErrorResponse		"Internal server error"
 //	@Router			/auth/register/request-new-code [post]
 func (ah *AuthHandler) RequestNewRegistrationCode(ctx *gin.Context) {
 	var req newRegistrationCodeRequest
@@ -183,7 +183,7 @@ type changePasswordRequest struct {
 	NewPassword string `json:"new_password" binding:"required,min=8" example:"newpassword"`
 }
 
-// ChangeOwnPassword godoc
+// ResetPassword godoc
 //
 //	@Summary		Change own password
 //	@Description	Change the authenticated user's password by providing the old and new passwords
@@ -218,8 +218,8 @@ func (ah *AuthHandler) ChangePassword(ctx *gin.Context) {
 	response.HandleSuccess(ctx, nil)
 }
 
-// resetPasswordRequest represents the request body for requesting a reset of a forgotten password
-type resetPasswordRequest struct {
+// forgotPasswordRequest represents the request body for requesting a reset of a forgotten password
+type forgotPasswordRequest struct {
 	Email string `json:"email" binding:"required,email" example:"user@example.com"`
 }
 
@@ -230,92 +230,59 @@ type resetPasswordRequest struct {
 //	@Tags			Authentication
 //	@Accept			json
 //	@Produce		json
-//	@Param			request	body		resetPasswordRequest	true	"Request reset forgot password request body"
+//	@Param			request	body		forgotPasswordRequest	true	"Request reset forgot password request body"
 //	@Success		200		{object}	response.Response		"Password reset request initiated successfully"
 //	@Failure		400		{object}	response.ErrorResponse	"Validation error"
 //	@Failure		404		{object}	response.ErrorResponse	"User not found error"
 //	@Failure		500		{object}	response.ErrorResponse	"Internal server error"
+//	@Router			/auth/forgot-password [post]
+func (ah *AuthHandler) ForgotPassword(ctx *gin.Context) {
+	var req forgotPasswordRequest
+	if err := ctx.ShouldBindJSON(&req); err != nil {
+		response.ValidationError(ctx, err)
+		return
+	}
+
+	err := ah.svc.ForgotPassword(ctx, req.Email)
+	if err != nil {
+		response.HandleError(ctx, err)
+		return
+	}
+
+	response.HandleSuccess(ctx, nil)
+}
+
+// resetPasswordRequest represents the request body for resetting password
+type resetPasswordRequest struct {
+	Email       string `json:"email" binding:"required,email" example:"test@example.com"`
+	NewPassword string `json:"new_password" binding:"required,min=8" example:"new_password" minLength:"8"`
+	OTP         string `json:"otp" binding:"required" example:"123456"`
+}
+
+// ResetPassword godoc
+//
+//	@Summary		Reset user's password
+//	@Description	Resets user's password after confirmation with OTP code.
+//	@Tags			Authentication
+//	@Accept			json
+//	@Produce		json
+//
+//	@Param			request	body		resetPasswordRequest	true	"Request reset password request body"
+//
+//	@Success		200		{string}	string					"Password reset successfully"
+//	@Failure		400		{string}	string					"Invalid email or password format"
+//	@Failure		401		{string}	string					"Invalid OTP code"
+//	@Failure		404		{string}	string					"User not found"
+//	@Failure		500		{string}	string					"Internal server error"
 //	@Router			/auth/reset-password [post]
-func (ah *AuthHandler) RequestResetPassword(ctx *gin.Context) {
+func (ah *AuthHandler) ResetPassword(ctx *gin.Context) {
 	var req resetPasswordRequest
 	if err := ctx.ShouldBindJSON(&req); err != nil {
 		response.ValidationError(ctx, err)
 		return
 	}
 
-	err := ah.svc.RequestResetPassword(ctx, req.Email)
-	if err != nil {
-		response.HandleError(ctx, err)
-		return
-	}
-
-	response.HandleSuccess(ctx, nil)
-}
-
-// confirmResetPasswordRequest represents the request body for confirming password reset with OTP code
-type confirmResetPasswordRequest struct {
-	Email string `json:"email" binding:"required,email" example:"test@example.com"`
-	OTP   string `json:"otp" binding:"required" example:"123456"`
-}
-
-// ConfirmResetPassword godoc
-//
-//	@Summary		Confirm password reset with OTP code
-//	@Description	Confirm password reset by providing the email and OTP code
-//	@Tags			Authentication
-//	@Accept			json
-//	@Produce		json
-//	@Param			request	body		confirmResetPasswordRequest	true	"Confirm password reset request"
-//	@Success		200		{object}	response.Response			"Successfully confirmed password reset"
-//	@Failure		400		{object}	response.ErrorResponse		"Validation error"
-//	@Failure		404		{object}	response.ErrorResponse		"Data not found error"
-//	@Failure		500		{object}	response.ErrorResponse		"Internal server error"
-//	@Router			/auth/reset-password/confirm [post]
-func (ah *AuthHandler) ConfirmResetPassword(ctx *gin.Context) {
-	var req confirmResetPasswordRequest
-	if err := ctx.ShouldBindJSON(&req); err != nil {
-		response.ValidationError(ctx, err)
-		return
-	}
-
-	err := ah.svc.ConfirmResetPassword(ctx, req.Email, req.OTP)
-	if err != nil {
-		response.HandleError(ctx, err)
-		return
-	}
-
-	response.HandleSuccess(ctx, nil)
-}
-
-// setNewPasswordRequest represents the request body for resetting password
-type setNewPasswordRequest struct {
-	Email       string `json:"email" binding:"required,email" example:"test@example.com"`
-	NewPassword string `json:"new_password" binding:"required,min=8" example:"new_password" minLength:"8"`
-	OTP         string `json:"otp" binding:"required" example:"123456"`
-}
-
-// SetNewPassword godoc
-//
-//	@Summary		Reset user password after confirmation with OTP code
-//	@Description	Reset user password by providing the email, new password, and OTP code
-//	@Tags			Authentication
-//	@Accept			json
-//	@Produce		json
-//	@Param			request	body		setNewPasswordRequest	true	"Reset password request"
-//	@Success		200		{object}	response.Response		"Successfully reset password"
-//	@Failure		400		{object}	response.ErrorResponse	"Validation error"
-//	@Failure		404		{object}	response.ErrorResponse	"Data not found error"
-//	@Failure		422		{object}	response.ErrorResponse	"Passwords do not match"
-//	@Failure		500		{object}	response.ErrorResponse	"Internal server error"
-//	@Router			/auth/reset-password/new [put]
-func (ah *AuthHandler) SetNewPassword(ctx *gin.Context) {
-	var req setNewPasswordRequest
-	if err := ctx.ShouldBindJSON(&req); err != nil {
-		response.ValidationError(ctx, err)
-		return
-	}
-
-	err := ah.svc.SetNewPassword(ctx, req.Email, req.NewPassword, req.OTP)
+	err := ah.svc.ResetPassword(ctx, req.Email, req.NewPassword, req.OTP)
 	if err != nil {
 		response.HandleError(ctx, err)
 		return
